Add picture reference for Javier in modernfamily.yaml

--- a/examples/modernfamily/modernfamily.yaml
+++ b/examples/modernfamily/modernfamily.yaml
@@ -159,8 +159,8 @@ people:
     fullname: Delgado, Javier
     class: [minor]
     born: 1969
-    # pics:
-    #   - javier.png
+    pics:
+      - javier.png
 
 # styles:
 #   minor:
